alignment and correction changes

--- a/src/assets/scss/base/_root.scss
+++ b/src/assets/scss/base/_root.scss
@@ -17,6 +17,16 @@ body {
     overflow-x: hidden;
 }
 
+.app-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.main-content {
+    flex: 1;
+}
+
 .section {
     width: $container-width;
     margin: 0 auto 4rem auto;
