--- a/src/assets/scss/components/_qualifications.scss
+++ b/src/assets/scss/components/_qualifications.scss
@@ -5,7 +5,7 @@
         width: 100%;
         color: $light-grey;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         gap: 3rem;
         
         .experience-cont, .education-cont {
